Proposal fix for #566
Signed-off-by: Hayato Uenohara <uenohara@gmail.com>