@@ -105,6 +105,23 @@
           <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
+       <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.12.4</version>
+          <executions>
+            <execution>
+              <id>default-test</id>
+              <phase>test</phase>
+              <goals>
+                <goal>test</goal>
+              </goals>
+              <configuration>
+                <!-- Enable security manager.  Pass basedir/localrepo to be refernced by java.policy file (see test/resources/java.policy). -->
+                <argLine>-Dbasedir=${basedir} -Dlocalrepo=${user.home}/.m2/repository -Djava.security.policy=${basedir}/src/test/resources/java.policy -Djava.security.manager</argLine>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
     </plugins>
   </build>
   <profiles>
